--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Push
+name: Generate a build and push to another branch
 
 on:
   push:
@@ -8,17 +8,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Push
+    name: Build and Push
     steps:
       - name: git-checkout
         uses: actions/checkout@v3
 
       - name: Install all dependencies
         run: npm install
-        
+
       - name: Push
-        uses: s0/git-publish-action@develop
+        uses: s0/git-publish-subdir-action@develop
         env:
           REPO: self
+          BRANCH: build # The branch name where you want to push the assets
+          FOLDER: dist # The directory where your assets are generated
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
-          MESSAGE: "Deployed: ({sha}) {msg}" # The commit message
+          MESSAGE: "Build: ({sha}) {msg}" # The commit message
