--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qsine_website",
+  "name": "dherrrnandez portfolio",
   "version": "1.3",
   "description": "",
   "main": "index.js",
